changed nav bar colour, fixed spacing on photos

--- a/styles/sass/partials/_main.scss
+++ b/styles/sass/partials/_main.scss
@@ -60,11 +60,10 @@ a {
    display: flex;
    justify-content: center;
    padding: 4px 0;
-   background: $sixth;
+   background: white;
    position: fixed;
    width: 100%;
    z-index: 50;
-   // letter-spacing: 1px;
 }
 
 .mainNav a {
@@ -107,7 +106,6 @@ a {
    text-shadow: 2px 2px 2px $fourth;
    font-size: 1.5rem;
    font-weight: bold;
-   // letter-spacing: 2px;
    padding: 12px;
    color: $seventh;
 }
@@ -198,7 +196,6 @@ header {
 }
 
 #message {
-   // text-transform: lowercase;
    letter-spacing: 6px;
 }
 
@@ -206,7 +203,6 @@ header {
    height: fit-content;
    position: relative;
    top: 2rem;
-   right: -1rem;
    background-color: white;
    transform: scale(0.9, 0.9) rotate(7deg);
    transition: 1s;
@@ -219,17 +215,14 @@ header {
 
 .headerImg {
    height: auto;
-   width: 460px;
-   padding: 15px 15px 105px 15px;
+   width: 360px;
+   padding: 15px 15px 100px 15px;
    border-radius: 10px;
 }
 
 // About styles
 .about {
    background-color: $sixth;
-   // background-image: url("../assets/beigeBackground.jpg");
-   // background-size: cover;
-   // background-repeat: no-repeat;
    padding: 100px 0;
    h2 {
       padding-bottom: 50px;
@@ -287,7 +280,6 @@ header {
    padding: 100px 0;
    h2 {
       padding-bottom: 50px;
-      // text-align: center;
    }
 }
 
@@ -333,8 +325,6 @@ header {
 
 // Projects styles
 .projects  {
-   // background: $second;
-   // background-image: linear-gradient( $second, $third);
    background-image: url("../assets/beigeBackground.jpg");
    background-size: cover;
    background-repeat: no-repeat;
@@ -348,10 +338,7 @@ header {
       color: white;
       font-size: 2.5rem;
       margin-bottom: 20px;
-      // letter-spacing: 3px;
-      // border-bottom: 1px solid $sixth;
       text-align: center;
-      // text-decoration: underline 2px solid;
    }
 
    p, li  {
@@ -467,7 +454,6 @@ a.partnerLink:focus {
 .gallery  {
    background-color: $sixth;
    padding: 80px 50px;
-   // text-align: center;
    h2 {
       color: $seventh;
       margin-bottom: 50px;
