--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -40,7 +40,7 @@
       justify-content: center;
       align-items: center;
       img {
-         width: 40%;
+         width: 50%;
       }
    }
 
@@ -123,14 +123,14 @@
       top: -13px;
       width: 100%;
       margin-top: 13px;
-      background: $sixth;
+      background: white;
       color: $seventh;
    }
    
    .mobileNav {
       display: flex;
       flex-direction: column;
-      background-color: $sixth;
+      background-color: white;
       position: fixed;
       width: 100%;
       text-align: center;
