--- a/styles/style.css
+++ b/styles/style.css
@@ -375,7 +375,7 @@ a {
       -ms-flex-pack: center;
           justify-content: center;
   padding: 4px 0;
-  background: #f2f1f6;
+  background: white;
   position: fixed;
   width: 100%;
   z-index: 50;
@@ -569,7 +569,6 @@ header {
   height: fit-content;
   position: relative;
   top: 2rem;
-  right: -1rem;
   background-color: white;
   -webkit-transform: scale(0.9, 0.9) rotate(7deg);
           transform: scale(0.9, 0.9) rotate(7deg);
@@ -585,8 +584,8 @@ header {
 
 .headerImg {
   height: auto;
-  width: 460px;
-  padding: 15px 15px 105px 15px;
+  width: 360px;
+  padding: 15px 15px 100px 15px;
   border-radius: 10px;
 }
 
@@ -1112,7 +1111,7 @@ footer p {
             align-items: center;
   }
   .aboutContainer img {
-    width: 40%;
+    width: 50%;
   }
   .aboutRight {
     width: 100%;
@@ -1191,7 +1190,7 @@ footer p {
     top: -13px;
     width: 100%;
     margin-top: 13px;
-    background: #f2f1f6;
+    background: white;
     color: #715860;
   }
   .mobileNav {
@@ -1202,7 +1201,7 @@ footer p {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    background-color: #f2f1f6;
+    background-color: white;
     position: fixed;
     width: 100%;
     text-align: center;
